// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar AnonymousAvatar should match the snapshot 1`] = `
<div>
  <span
    class="mc-c-kEyFKe mc-c-kEyFKe-hECRKn-shape-circle mc-c-kEyFKe-kRzPmM-size-md mc-c-kEyFKe-PSaFj-default-true mc-c-kEyFKe-iPJLV-css"
  >
    <i
      data-testid="mock-icon-User"
    />
  </span>
</div>
`;

exports[`Avatar Basic should match the snapshot 1`] = `
<div>
  <span
    class="mc-c-kEyFKe mc-c-kEyFKe-hECRKn-shape-circle mc-c-kEyFKe-kRzPmM-size-md mc-c-kEyFKe-iilQgtF-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;

exports[`Avatar ImageAvatar should match the snapshot 1`] = `
<div>
  <span
    class="mc-c-kEyFKe mc-c-kEyFKe-hECRKn-shape-circle mc-c-kEyFKe-kRzPmM-size-md mc-c-kEyFKe-iPJLV-css"
  >
    <img
      alt="John Smith Avatar"
      src="https://i.pravatar.cc/150?img=42"
    />
  </span>
</div>
`;

exports[`Avatar SquareAvatar should match the snapshot 1`] = `
<div>
  <span
    class="mc-c-kEyFKe mc-c-kEyFKe-liDPBl-shape-square mc-c-kEyFKe-bFVlRr-size-lg mc-c-kEyFKe-iilQgtF-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;
